--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-phonecat",
+  "name": "MarketApp",
   "private": true,
   "version": "0.0.0",
   "description": "A tutorial application for AngularJS",
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "1.7.x",
+    "angular-route": "^1.7.5",
     "bootstrap": "3.3.x"
   },
   "devDependencies": {
